Update documentation to master@03d3e2c

--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@ dirty principles of docco).</p>
 <h2 id="known-issues">Known Issues</h2>
 
 <ul>
+<li>Relative links in <code class="prettyprint">README.md</code> only work in Slate-rendered
+documentation. Refer to <a href="http://matthewlmcclure.github.io/lade">http://matthewlmcclure.github.io/lade</a>.</li>
 <li>Lade&rsquo;s own documentation produces many small partial Markdown
 files. It seems more desirable that it could assemble fragments from
 many places in the source code into a given Markdown file so that
