--- a/user/index.html
+++ b/user/index.html
@@ -115,7 +115,7 @@
 <p>Lade depends on <a href="http://nodejs.org/">Node.js</a>. Assuming you have Node,
 and your Node came with <a href="http://npmjs.org/">npm</a>, you can install Lade
 using:</p>
-<pre class="highlight shell"><code><span class="gp">$ </span>npm install -g lade
+<pre class="highlight shell"><code><span class="gp">$ </span>npm install -g Lade
 </code></pre>
 
 <p>For those new to npm, <code class="prettyprint">-g</code> indicates that you want Lade installed
